--- a/src/app/components/people-data/people-data.component.html
+++ b/src/app/components/people-data/people-data.component.html
@@ -22,7 +22,7 @@
           <td>{{alphaAccount.password}}</td>
           <td>{{alphaAccount.walletKeys[0].privateKey}}</td>
           <td>{{alphaAccount.walletKeys[0].publicKey}}</td>
-          <td>{{returnBalanceAlpha(alphaAccount.userIndex)}}</td>
+          <td>{{returnBalanceAlpha()}}</td>
         </tr>
       </tbody>
     </table>
